# pyopenaichat

./: README.md  pyproject.toml
pyopenaichat/: __init__.py  assistant.py  chat.py  function.py  system.py  user.py
